# aoc_2023

./: .gitignore  CMakeLists.txt  Makefile
day1/: CMakeLists.txt
day1/include/: libft.h
day1/lib/: Makefile
day1/src/: main.c  main.h
day2/: CMakeLists.txt
day2/include/: libft.h
day2/src/: game.c  game.h  main.c  main.h
day3/: CMakeLists.txt
day3/include/: input1test
day3/src/: game.c  game.h  main.c  main.h
lib/: Makefile  ft_strstr.c  libft.h
lib/libft/: Makefile  libft.h
lib/libft/io/: Makefile.mk
lib/libft/string/: Makefile.mk
template/: CMakeLists.txt
template/src/: main.c  main.h
